Footer spacing fixed

--- a/02_css_lab/cc_travel_start/style.css
+++ b/02_css_lab/cc_travel_start/style.css
@@ -1,7 +1,8 @@
 body {
   /* Set the font-family for the entire body to Roboto with a generic family of sans-serif */
   /* Hint: https://developer.mozilla.org/en-US/docs/Web/CSS/font-family */
-  font-family: "Roboto";
+  /* font-family: "Roboto"; */
+  font-family: 'Papyrus';
 }
 
 header {
@@ -34,7 +35,6 @@ nav {
   /* Use flexbox to vertially align the nav child elements in the center */
   background-color: #103594;
   height: 2rem;
-
   display: flex;
   align-items: center;  
 }
@@ -105,15 +105,17 @@ nav ul li a {
 .search-bar {
   /* not working :( */
   padding: 0.5rem;
+  
 }
 .input-field * {
-  height: 35px;
+  /* height: 35px;
   max-height: 35px;
   width: 160px;
-  max-width: 160px;
+  max-width: 160px; */
   padding: 0px;
   border: none;
-
+  border-radius: 2px;
+  min-height: 2rem;
 }
 
 input {
@@ -152,11 +154,10 @@ input {
   grid-template-areas: 
   'item item item'
   'item item item';
-  grid-template-columns: 30% 30% 30%;
-  gap: 1rem;
-  justify-content: center;
-  /* display: grid; */
-  /* justify-content: space-between; */
+  grid-template-columns: 33% 33% 33%;
+  padding: 0.5em;
+  max-width: 100%;
+  justify-content: space-between;
 /* The destinations are enclosed in an article element that we want to make a grid */
   /* Set the display property to 'grid' and justify the content */
 }
@@ -175,7 +176,7 @@ input {
   'item item item';
   grid-template-columns: 30% 30% 30%;
   gap: 1rem;*/
-  justify-content: center;
+  /* justify-content: space-between; */
   
   /* The row of the grid has 3 columns which should be the same width and roughly a third of the available space */
   /* Use the grid-template-columns property to set each column to 30% */
@@ -203,13 +204,18 @@ img {
 }
 
 .single-testmonial{
-  height: 300px;
-  width: 200px;
+  min-height: 300px;
+  background-color: grey;
+  display: flex;
+  padding: 0.5em;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 .single-testmonial *{
   justify-content: center;
-  background-color: grey;
+  
   margin: 0px;
   /* Write your code here */
 }
